--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <noscript>
       <strong>
-        We're sorry but P-Word doesn't work properly without JavaScript enabled.
+        We're sorry but vault doesn't work properly without JavaScript enabled.
         Please enable it to continue.
       </strong>
     </noscript>
